--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="site-title">
-      <a href="{{ '/' | relative_url }}">{{ site.title }}</a>
+      <a href="{{ '/' | relative_url }}">@{{ site.title }}</a>
     </div>
     <div class="site-subtitle font-italic">{{ site.tagline }}</div>
   </div>
