--- a/_includes/mode-toggle.html
+++ b/_includes/mode-toggle.html
@@ -3,6 +3,7 @@
 -->
 
 <script type="text/javascript">
+  console.log("mode-toggle.html")
   class ModeToggle {
     static get MODE_KEY() { return "mode"; }
     static get MODE_ATTR() { return "data-mode"; }
@@ -117,4 +118,6 @@
   } /* ModeToggle */
 
   const modeToggle = new ModeToggle();
+  console.log("modeToggle:")
+  console.log((modeToggle))
 </script>
